cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             generic-github-user
maintainer:         40661852+generic-github-user@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      -- intervals >= 0.6.2.1
                      -- intervals >= 0.9.2,
                      intervals,
                      IntervalMap >= 0.6.2.1,
                      -- data-interval >= 2.1.1,
                      split >= 0.2.4,
                      Ranged-sets >= 0.4.0,
                      sort >= 1.0.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
